Initial BlogUI commit

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,60 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+
+:root{
+    --primary-color: #026467;
+    --secondary-color: #FFEBB7;
+    --body-text-color: #596392;
+    --navbar-footer-color: #FFDFAE;
+}
+
+body{
+    font-family: 'Kanit', sans-serif;
+    font-size: 20px;
+    color: var(--body-text-color);
+}
+
+.site-logo{
+    padding: 5px 20px;
+    border-radius: 20px;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+.nav-link{
+    color: var(--primary-color);
+}
+
+.shadow-effect{
+    border: none;
+    box-shadow: 0px 0px 33px -10px rgba(71, 114, 254, 0.3);
+}
+
+.bg-theme{
+    background-color: var(--primary-color);
+}
+
+.bg-secondary-theme{
+    background-color: var(--secondary-color);
+}
+
+.text-theme-primary{
+    color: var(--primary-color);
+}
+
+input[type = text], input[type = email] {
+    height: 45px;
+    padding-left: 20px;
+    margin: 20px;
+    font-size: 16px;
+    width: 99%;
+}
+
+.btn-theme{
+    height: 45px;
+    border: none;
+    font-size: 18px;
+    color: white;
+    background-color: var(--primary-color);
+}
